ee/Kubernetes-Deployment-yamls-v3/k8-cometa-namespace-and-service-account.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cometa
