ee/Kubernetes-Deployment-yamls-v3/k8-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cometa-front-deployment
  namespace: cometa  # Set the namespace to 'cometa'
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: cometa-front-pod  # Ensure this matches the label used in the template
  template:
    metadata:
      labels:
        app: cometa-front-pod
    spec:
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      containers:
      - name: cometa-front-container
        image: cometa/front:0.1.3
        ports:
        - containerPort: 8080
        - containerPort: 8443
        command: ["/bin/bash","-c"]
        args: ['/share/apache2/start_server.sh']

        volumeMounts:
        - name: cometa-volume
          mountPath: /screenshots
          subPath: ./data/cometa/screenshots
        - name: cometa-volume
          mountPath: /videos
          subPath: ./data/cometa/videos
        - name: cometa-volume
          mountPath: /usr/local/apache2/conf
          subPath: ./share/front/apache2/conf
        - name: cometa-volume
          mountPath: /share/apache2/certs
          subPath: ./share/front/apache2/certs
        - name: cometa-volume
          mountPath: /usr/local/apache2/modules/mod_auth_openidc.so
          subPath: ./share/front/apache2/modules/mod_auth_openidc.so
        - name: cometa-volume
          mountPath: /share/apache2/start_server.sh
          subPath: ./share/front/apache2/start_server.sh
        - name: cometa-volume
          mountPath: /usr/local/apache2/logs
          subPath: ./share/front/apache2/logs
           
        securityContext:
          allowPrivilegeEscalation: true
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
      volumes:
      - name: cometa-volume
        persistentVolumeClaim:
          claimName: cometa-data-volume-claim
      # restartPolicy: Always (uncomment if needed, default is Always for Deployment)
