ee/Kubernetes-Deployment-yamls-v3/k8-front-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cometa-front-service
  namespace: cometa  # Set the namespace to 'cometa'
spec:
  selector:
    app: cometa-front-pod
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
